angelikabartels/web/stylesheets/styles.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans);

@CHARSET "ISO-8859-1";

/* General settings */
body, p {
	font-family: 'Open Sans', sans-serif;
	font-size: 16px;
	color: #33537C;
	background-color: transparent;
}

h1 {
	font-family: 'Open Sans', sans-serif;
	font-size: 32px;
}

body#index {
	background-image: url("../img/amor_psyche_a.jpg");
	background-repeat: no-repeat;
	background-position: 0px 0px;
}

table, table tr, table td {
	border: 0px;
	margin: 0px;
	padding: 0px;
	border-collapse: collapse;
}

ul {
	padding-left: 2em;
}

li {
	margin-bottom: 2px;
}

a {
	color: #33537C;
}

/* Settings for main page */
.startentry {
	text-align: center;
}

.centerbox {
	top: 0px;
	left: 0px;
	margin: 0px;
	padding: 0px;
}

#startseite p {
	margin-top: 0px;
	padding-top: 0px;
}

#startseite h1 {
	margin-bottom: 6px;
	padding-bottom: 0px;
}

#text {
	padding-top: 18px;
	padding-left: 18px;
	padding-right: 18px;
}

#text img {
	float: right;
	padding-left: 18px;
	padding-bottom: 18px;
}

#text p, #text ul {
	text-align: justify;
	padding-bottom: 12px;
	padding-top: 0px;
	margin-bottom: 8px;
	margin-top: 2px;
}

#text p.subtitle {
	margin-top: -24px;
	padding-bottom: 24px;
}

#text p.supertitle {
	padding-bottom: 0px;
	margin-bottom: -18px;
	margin-top: 24px;
}

#text h1 {
	margin-bottom: 26px;
	padding-top: 0px;
	margin-top: 18px;
}

#text p.smallspace, #text ul.smallspace {
	padding-bottom: 3px;
}

#text ul {
	margin-top: 6px;
	margin-bottom: 6px;
}

#text hr {
	margin-top: 18px;
	margin-left: 36px;
	margin-right: 36px;
	margin-bottom: 24px;
}

#text p.footer {
	text-align: center;
	font-weight: bold;
	font-size: 13px;
	margin-top: 30px;
	margin-left: 30px;
	margin-right: 30px;
}

#text hr.footer {
	clear: both;
	page-break-after: avoid;
}

#text p.footer.verse {
	white-space: pre-wrap;
}

#text p.footer.secondary {
	margin-top: 0px;
}

#uebermich li {
	margin-bottom: 18px;
	text-align: left;
}

/* Settings for right side */

/* Settings for menu */
#menuleftbody {
	overflow: hidden;
}

#menuleft {
	position: absolute;
	top: 15px;
	left: 10%;
	overflow: hidden;
}

#menuleft.smallwidth {
	left: 5px;
}

#menuleft hr {
	height: 20px;
	margin: 0px;
	visibility: hidden;
}

#menuleft.smallheight hr {
	height: 4px;
}

#menuleft a {
	display: block;
	background-color: rgba(255, 255, 255, 0);
	margin-bottom: 5px;
	padding-left: 30px;
	text-decoration: none;
	font-size: 18px;
	position: relative;
	height: 29px;
	width: 50px;
	color: #33537C;
	border-radius: 8px;
	margin-bottom: 8px;
}

#menuleft a.twoline {
	height: 54px;
}

#menuleft.smallheight a {
	margin-bottom: 0px;
}

#menuleft a.smalltext {
	font-size: 15px;
	height: 25px;
}

#menuleft a.twoline.smalltext {
	height: 44px;
}

#menuleft a.chosen, #menuleft a.chosen.highlight {
	background: rgba(255, 255, 255, 0.5);
}

.ielte8 #menuleft a.chosen, .ielte8 #menuleft a.chosen.highlight {
	background: transparent;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7FFFFFFF,
		endColorstr=#7FFFFFFF);
	zoom: 1;
}

#menuleft a.highlight {
	background: rgba(255, 255, 255, 0.25);
}

.ielte8 #menuleft a.highlight {
	background: transparent;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#3FFFFFFF,
		endColorstr=#7FFFFFFF);
	zoom: 1;
}

#menuleft a span {
	position: absolute;
	top: 2px;
	left: 12px;
}

#menuleft.smallwidth a span {
	left: 5px;
}

/* Settings for dropdown menu */
#menudropdown ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

#menudropdown li {
	float: left;
	padding: 0;
	margin: 0;
}

#menudropdown li a {
	width: 300px;
	display: block;
	text-align: center;
	color: #000000;
	background-color: #8FB0DE;
	height: 35px;
	line-height: 35px;
	text-decoration: none;
	font-size: 16px;
	border: 1px solid #ccc;
	color: #000000;
}

#menudropdown img.icon {
	width: 24px;
	height: 24px;
}

/* Settings for bottom */
#bottom {
	background-image: url("../img/bottom.jpg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}

#bottom hr {
	color: #223653;
	background-color: #223653;
	border: 0;
	height: 3px;
	margin-top: 8px;
	margin-bottom: 8px;
}

#bottom table {
	border-collapse: collapse;
	padding: 0;
	margin: 0;
	width: 100%;
}

#bottom tr.address {
	color: #FFFFFF;
}

#bottom div#address {
	text-align: justify;
}

#bottom div#address div {
	display: inline-block;
	zoom: 1;
	*display: inline;
	padding: 5px 10px 5px 10px;
	white-space: nowrap;
}

#bottom.small div#address div {
	padding: 5px 5px 5px 5px;
}

#bottom.smaller div#address div {
	padding: 5px 0px 5px 0px;
}

#bottom div#address:after {
	content: '';
	width: 100%;
	display: inline-block;
}

#bottom a {
	color: #FFFFFF;
}

#bottom.small {
	font-size: 13px;
}

#bottom.smaller {
	font-size: 10px;
}

/* Settings for Impressum */
#impressum {
	background-color: #FFFFFF;
}

#impressum h2 {
	font-size: 24px;
	margin-top: 0px;
}

#impressum #impressumtable {
	text-align: left;
	border: 1px solid black;
}

#impressum #impressumtable td {
	font-size: 10px;
	padding-right: 5px;
	padding-bottom: 5px;
	vertical-align: top;
	border: 1px solid black;
}

#impressum #impressumtable p {
	font-size: 10px;
	margin-top: 0pt;
}

#impressum #impressumtable p.address {
	white-space: pre-wrap;
	margin-bottom: 0px;
	padding-bottom: 0px;
}

#impressum a.closeImpressum {
	font-size: 16px;
	font-weight: bold;
	border: 1px solid black;
	background-color: #C0C0C0;
	padding: 2px;
}

/* Settings for allcontent page */
@page {
	margin: 15mm 10mm 20mm 10mm;
}

